--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>Animatix</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="Animatic — Reveal Your Story" />
+  <meta property="og:description" content="A cinematic animated card just for you!" />
+  <meta property="og:image" content="/assets/social-preview.png" />
+  <meta property="og:url" content="https://animatic.app" />
+  <meta name="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
 
